added support for DBX files larger than 2GB
- updated autoconf
- updated copyright years
- replaced long with int where 32 bit values are used
- use unsigned long long for file size
- use stat to get file size instead of ftell
- remove use of win32 api for file size
- compile with -D_FILE_OFFSET_BITS=64 for 64bit file size support
- compilation flags: -Wall -Werror
- fixed file position validity check in dbxread.c

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 *[http://code.google.com/p/undbx/ UnDBX]* -
 Tool to extract e-mail messages from Outlook Express `.dbx` files. 
 
-Copyright (C) 2008 Avi Rozen <avi.rozen@gmail.com>
+Copyright (C) 2008, 2009 Avi Rozen <avi.rozen@gmail.com>
 
 ==DOWNLOAD==
 Windows binary and source code archives are available at
